# mkcourse

./: LICENSE  README.md  pyproject.toml
docs/: index.md  model.md  terms.md
examples/dsc400/: course.toml  course.yaml  parse_test.py  topics.md
examples/dsc400/lessons/12-week/week01/: lesson.toml
examples/dsc400/lessons/12-week/week02/: lesson.toml
examples/dsc400/lessons/12-week/week03/: lesson.toml
examples/dsc400/lessons/12-week/week04/: lesson.toml
examples/dsc400/lessons/12-week/week05/: lesson.toml
examples/dsc400/lessons/12-week/week06/: lesson.toml
examples/dsc400/lessons/12-week/week07/: lesson.toml
examples/dsc400/lessons/12-week/week08/: lesson.toml
examples/dsc400/lessons/12-week/week09/: lesson.toml
examples/dsc400/lessons/12-week/week10/: lesson.toml
examples/dsc400/lessons/12-week/week11/: lesson.toml
examples/dsc400/lessons/12-week/week12/: lesson.toml
examples/dsc400/syllabus/: syllabus-10-week.yaml  syllabus.toml  syllabus.yaml
mkcourse/: __main__.py  commands.py
tests/: test_mkcourse.py  test_mkcourse_cli.py
